<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Ghost</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
 	<string name="student_name">Augustus Logsdon\nCharlotte Blais\nPiotr Gregrowski\nCarina Cai</string>
 	<string name="start_button">Start</string><string name="basic_info">University Of Virginia CS2110 2013Fall</string>
 	<string name="pause_button">Stop</string>
 	<string name="save_button">Save</string>
 	<string name="location_button">Location</string>
    <string name="resume_button">Resume</string>
    <string name="find_me_button">Find me</string>
 	<string name="ghost_description">a cute ghost</string>
    <string name="player_health">Health:100</string>
    <string name="player_lives">Lives:3</string>
    <string name="inventory_bones">Bones:0</string>
 	

</resources>
