<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/imageView1"
        android:layout_height="0dp"
        android:layout_width="wrap_content"
        android:contentDescription="@string/ghost_description"
        android:src="@drawable/ghostpic" 
        android:layout_gravity="center_horizontal"
        android:layout_weight="3" />

    <LinearLayout
        android:id="@+id/splash_info"
        android:orientation="vertical" 
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_gravity="center_horizontal">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/basic_info"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/student_name" />
    </LinearLayout>

</LinearLayout>
